# ndscene

./: .gitignore  README.md  index.html  localhost.sh  main.py  pyproject.toml  tsconfig.flatbuffers.json
browser/ctscan/: index.html  three.js  viewer.js
browser/gltfdetails/: README.md  index.html  view.js
browser/read_ndscene/: index.html  ndscene_text_element.js  page.js
browser/viewcore/: index.html
cpp/ndscene/: ndscene.h  ndscene_json.h  ndtensor.h
cpp/tests/: compile.sh  run_test.sh  test.cpp  test.h
examples/: console.json
flatbuffer/: compile.sh  ndscene.fbs
js/: README.md  ndsceneDebugWeb.js  ndsceneFlatbuffers.js  ndsceneLegacyJson.js  ndsceneRuntime.js
json/freed_go/: view_1_scene.json  view_2_scene.json  view_3_scene.json  voxels.json
py/: imgui.ini  install_ext_torch.sh  install_package_py.sh  pyproject.toml  run_test_suite.sh
py/examples/: __main__.py  ndscene_3dvolume.py  ndscene_example.py  ndscene_freed_go.py  ndscene_freed_go_taichi.py  run.sh  run_go_test.sh
py/examples/data/: ndscenesql_example.sqlite
py/ndscene/: README.md  ndscene.py  setup.py
py/ndscenepy/: README.txt  ndscene.py  setup.py
py/ndscenepy/flatbuffers/: __init__.py  compiler.py
py/ndscenesql/: __init__.py  ndscenesql.py  schema.sql
py/tests/: __main__.py  ndscene_glyph_test.py  ndscene_tests.py  ndscene_torch_imageio.py  ndscene_torch_tests.py  ndscenesql_tests.py  run_test.sh  run_test_glyph.sh
server/: README.md  docker-compose.yml
server/backend/: Dockerfile  requirements.txt
server/backend/app/: main.py
server/frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
server/frontend/src/: App.tsx  styles.css
subgits/: README.md
ts/: ndsceneDebugWeb.ts  ndsceneFlatbuffers.ts  ndsceneLegacyJson.ts  ndsceneRuntime.ts  ndsceneTree.tsx
