[project]
name = "ndscene"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "imageio>=2.37.2",
    "ndscenepy",
    "numpy>=2.2.4,<2.3",
    "scipy>=1.15.2,<1.16",
    "taichi>=1.7.4",
    "torch>=2.1,<2.5",
]

[project.optional-dependencies]
mesh = [
    "pytorch3d",
]

[tool.uv.sources]
ndscenepy = { workspace = true }

[tool.uv.workspace]
members = ["py"]
