[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ndscenepy"
version = "0.1.0"
description = "n-dimensional graphics library"
readme = "ndscenepy/README.txt"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.2",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[tool.setuptools]
packages = ["ndscenepy"]
