[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ndscenepy"
version = "0.1.0"
description = "n-dimensional graphics library"
readme = "ndscenepy/README.txt"
requires-python = ">=3.10,<3.11"
dependencies = [
    "imageio>=2.37.2",
    "numpy>=2.2.4,<2.3",
    "scipy>=1.15.2,<1.16",
    "torch==2.4.1",
]

[project.optional-dependencies]
mesh = [
    "pytorch3d",
]

[project.scripts]
ndscene-sql-write-example-db = "ndscenesql.ndscenesql:main"

[tool.setuptools]
packages = ["ndscenepy", "ndscenesql", "tests", "examples"]

[tool.setuptools.package-data]
ndscenesql = ["schema.sql"]
